# Signal_Processing_Instrument

./: README.md  main.py  pyproject.toml  test.py
components/: AugEntry.py  CustomSignalAug.py  MyCanvas.py  PerioSignalAugment.py  ProcessTab.py  SignalAugment.py  SignalComboBox.py  SignalGroup.py  SignalInfo.py
core/: function.py  ui_control.py
report/: pdflatex27392.fls  report.tex
report/markmap/: major_framework.md
ui/: app.py
utils/: __init__.py
