[tool.poetry]
name = "signal-processing-instrument"
version = "0.1.0"
description = ""
authors = ["dream同学0 <1399541701@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
customtkinter = "^5.2.2"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
